{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "d63806af-a21f-4bd8-ba1b-6109e3d61a5e",
            "actions": [
                {
                    "name": "MoveAction",
                    "type": "Value",
                    "id": "192fda42-4c64-4ddf-ac9d-b73de7edcadb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LookAction",
                    "type": "Value",
                    "id": "e5c5e164-ab38-4021-99c8-d292bbf3031e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7532470a-9bad-48ad-890b-1c02b77453e4",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7489c59b-3eaa-48ee-822e-d28230ef2031",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}